fix for nav on news page; overlapping

--- a/sass/components/navigation/_navigation.scss
+++ b/sass/components/navigation/_navigation.scss
@@ -3,7 +3,7 @@
 	width: 100%;
 
 	#primary-menu {
-		z-index: 1000;
+		position: relative;
 	}
 
 	ul {
