--- a/style.css
+++ b/style.css
@@ -742,7 +742,7 @@ textarea {
 	width: 100%;
 }
 .main-navigation #primary-menu {
-	z-index: 1000;
+	position: relative;
 }
 .main-navigation ul {
 	display: none;
